Scripts de arranque de servidor
He implementado dos scripts de arranque:
- **start**: Arranca el servidor node-express con parametros más
  *"verbosos"*. También se añade la variable de entorno
`NODE_ENV=development`.
- **startProd**: Arranca el servidor node-express con parámetros
  adecuados para este caso.

--- a/nodepop/package.json
+++ b/nodepop/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "DEBUG=express,nodepop:* PORT=3001 NODE_ENV=development nodemon ./bin/www",
+    "startProd": "PORT=3000 NODE_ENV=production nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
