--- a/nodepop/package.json
+++ b/nodepop/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "DEBUG=express,nodepop:* PORT=3001 NODE_ENV=development nodemon ./bin/www",
-    "startProd": "PORT=3000 NODE_ENV=production nodemon ./bin/www"
+    "start": "NODE_PATH=. DEBUG=express,nodepop:* PORT=3001 NODE_ENV=development nodemon ./bin/www",
+    "startProd": "NODE_PATH=. PORT=3000 NODE_ENV=production nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
