--- a/nodepop/package.json
+++ b/nodepop/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "async": "^2.0.0-rc.3",
+    "bcrypt": "^0.8.6",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
