--- a/nodepop/package.json
+++ b/nodepop/package.json
@@ -16,6 +16,8 @@
     "express": "~4.13.1",
     "mongoose": "^4.4.14",
     "morgan": "~1.6.1",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.0.0",
     "serve-favicon": "~2.3.0"
   }
 }
