--- a/package.json
+++ b/package.json
@@ -20,5 +20,13 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.0.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^2.9.0",
+    "eslint-config-standard": "^5.3.1",
+    "eslint-plugin-promise": "^1.1.0",
+    "eslint-plugin-standard": "^1.3.2",
+    "standard": "^7.0.1",
+    "standard-format": "^2.1.1"
   }
 }
